--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^2.2.8",
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0"
   },
@@ -18,7 +20,9 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "sass": "^1.49.0",
+    "sass-loader": "^10.2.1"
   },
   "eslintConfig": {
     "root": true,
